# penguins_classificacio

./: pyproject.toml
notebooks/: client.ipynb  decision_tree_model.pkl  knn_model.pkl  logistic_regression_model.pkl  svm_model.pkl  tasca-penguins.ipynb
penguins_classificacio/: penguins_prediccio_app.py  penguins_service.py
