[tool.poetry]
name = "penguins-classificacio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
